<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/invencion1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv1"
        style="@style/Titulos"
        android:paddingLeft="45dp"
        android:text="@string/Saludo" />

    <TextView
        android:id="@+id/tv2"
        style="@style/Titulos.SubTitulos"
        android:layout_below="@+id/tv1"
        android:paddingLeft="78dp"
        android:text="@string/Saludo2" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/BtnDo"
            style="@style/Botones"
            android:text="@string/BtnDo" />

        <Button
            android:id="@+id/BtnRe"
            style="@style/Botones"
            android:text="@string/BtnRe" />

        <Button
            android:id="@+id/BtnMi"
            style="@style/Botones"
            android:text="@string/BtnMi" />
    </LinearLayout>

    <Button
        android:id="@+id/BtnLa"
        style="@style/Botones"
        android:layout_alignBaseline="@+id/BtnSol"
        android:layout_alignBottom="@+id/BtnSol"
        android:layout_centerHorizontal="true"
        android:text="@string/BtnLa" />

    <ToggleButton
        android:id="@+id/BtnDirection"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_below="@+id/BtnLa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textOff="@string/BtnDescendente"
        android:textOn="@string/BtnAscendente" />

    <Button
        android:id="@+id/BtnSol"
        style="@style/Botones"
        android:layout_alignLeft="@+id/row1"
        android:layout_below="@+id/row1"
        android:text="@string/BtnSol" />

    <Button
        android:id="@+id/BtnSi"
        style="@style/Botones"
        android:layout_above="@+id/BtnDirection"
        android:layout_alignRight="@+id/row1"
        android:text="@string/BtnSi" />

    <Button
        android:id="@+id/BtnFa"
        style="@style/Botones"
        android:layout_above="@+id/BtnSi"
        android:layout_toRightOf="@+id/row1"
        android:text="@string/BtnFa" />

</RelativeLayout>